<resources>
    <string name="app_name">Alarmo</string>
    <string name="to_watch">Watch</string>
    <string name="to_other">Other</string>
    <string name="go_ring">Ring</string>
    <string name="select_Ring">SelRing</string>
    <string name="action_settings">设置</string>
    <string-array name="list_entries_value">
        <item>shandong</item>
        <item>fujian</item>
        <item>beijing</item>
        <item>hebei</item>
    </string-array>

    <string-array name="list_entries">
        <item>山东</item>
        <item>福建</item>
        <item>北京</item>
        <item>河北</item>
    </string-array>

    <string name="deflault_list_entries_value">Yellow</string>
    <string name="notification">提示音选择</string>
    <string name="text_color">时钟颜色</string>
    <string name="pref_vibrate">震动提示</string>
    <string name="notification_service">提示服务</string>
    <string name="pref_select_times">报时时段</string>
    <string name="pref_advance_one">提前一分钟提醒</string>
    <string name="pref_add_shortcut">添加全屏时钟快捷方式</string>
    <string name="pref_24hours">使用24小时制</string>
    <string name="pref_select_colors_summary">选择要显示的颜色</string>
    <string name="pref_select_colors_tittle">颜色选择</string>
    <string name="options">设置</string>
    <string-array name="list_color">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
    <string-array name="list_color_value">
        <item>#ffcc0000</item>
        <item>#ff00ddff</item>
        <item>#ff009900</item>
    </string-array>
</resources>
